crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_loader_receiver.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_loader_receiver/main.py
---
packages:
  - loader-pkg
count: 1
