crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_metadata_class_order.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_metadata_class_order/main.py
---
packages:
  - provider
count: 1
