crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_metadata_query_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_metadata_query_dependency/main.py
---
packages:
  - queried-pkg
  - shared-dep
count: 2
